2011-02-02  Dimitri Glazkov  <dglazkov@chromium.org>

Reviewed by David Levin.

        GCC compiler on ARM issues bogus warnings and fails to compile.
        https://bugs.webkit.org/show_bug.cgi?id=53620

        Despite warnings explicitly being disallowed (-Wno-uninitialized),
        gcc (Ubuntu 4.4.3-4ubuntu5) 4.4.3 throws up the warnings like:

        "error: 'colorTransparent.unstatic.4909' may be used uninitialized in this function"

        The fix is to add an extra condition, which somehow pacifies the compiler.

        * css/CSSPrimitiveValue.cpp:
        (WebCore::CSSPrimitiveValue::createColor): Added workaround conditions.

Canonical link: https://commits.webkit.org/67547@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77464 268f45cc-cd09-0410-ab3c-d52691b4dbfc